--- a/09_POO/.vscode/settings.json
+++ b/09_POO/.vscode/settings.json
@@ -3,6 +3,7 @@
     "ejercicios",
     "ejemplos",
     "ejemplos\\Animal",
-    "ejercicios\\Ejercicio12"
+    "ejercicios\\Ejercicio12",
+    "ejercicios\\EjercicioPracticaExamen"
   ]
 }
